<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--garb-->
    <color name="transparent_gray">#44000000</color>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_name">Adaptive remote</string>

    <!--Settings-->
    <string name="title_activity_settings">Settings</string>
    <string name="left_scroll">eft scroll</string>
    <string name="right_scroll">Right scroll</string>
    <string name="enter_after_voiceinput">Enter after voice input</string>
    <string name="settings_about_replace">Replase map</string>

    <string name="title_activity_voice_fn_mapping_list">Voice Fn commands</string>

    <string name="title_activity_fn_select">Fn Select</string>

    <string name="title_activity_launch_from_task_bar">Launch from taskbar</string>

    <string name="title_activity_fn_byn_id">FnBynId</string>

    <!--Vol buttons-->
    <string name="volDown">vol -</string>
    <string name="volUp">vol +</string>
    <string name="set_vol_buttons_dialog_title">Vol buttons settings</string>
    <string name="set_vol_buttons_dialog_body">Enable for current process, set by default or reset?</string>
    <string name="set_vol_buttons_b1">for current process</string>
    <string name="set_vol_buttons_b2">by default</string>
    <string name="set_vol_buttons_b3">reset</string>

    <!--Tutorial-->
    <string name="title_activity_tutorial">Help</string>
    <string name="send_link_via">Send link via</string>
    <string name="tutorial_send_me_link">Send me download PC app link!</string>

    <string-array name="tutorial_titles">
        <item>Main screen</item>
        <item>Side menu, buttons set up</item>
        <item>Add button dialog</item>
        <item>Interface integration</item>
        <item>...</item>
    </string-array>

    <string-array name="tutorial_1">
        <item>Empty space is touchpad</item>
        <item>This button shows current PC app and its functions</item>
        <item>Connect to PC (install server first)</item>
    </string-array>

    <string-array name="tutorial_2">
        <item>Drag button to set up main screen</item>
        <item>Add new button</item>
    </string-array>

    <string-array name="tutorial_3">
        <item>You can choose preset button, make your own or download plugin with ready to use buttons</item>
    </string-array>

    <string-array name="tutorial_4">
        <item>Slide from left or right button to open app context menu on PC</item>
        <item>Slide from center button to switch apps on PC</item>
    </string-array>





    <!--Voice input-->
    <string name="voice_input_hint_launch_app">What app to launch?</string>
    <string name="voice_input_hint_voice_input">Speak...</string>
    <string name="voice_input_hint_cmd_input">Input...</string>
    <string name="voice_input_hint_voice_fn">What Fn to fire? Input?</string>

    <!--Connect to server-->
    <string name="connect_dialog_title">Connect to PC</string>
    <string name="connect_dialog_body">IP and port:</string>
    <string name="connect_dialog_okj">Connect!</string>
    <string name="connect_dialog_no_port">Port?</string>
    <string name="connect_dialog_no_ip">IP?</string>
    <string name="connect_dilog_no_ip_no_port">IP? Port?</string>
    <string name="connect_dialog_scan_qr">Scan QR</string>
    <string name="connect_dialog_no_barcode_scanner">Get QR scanner</string>


    <!--btn titles-->
    <string name="no_functon">No function</string>
    <string name="btn_voice_fn">Voice Fn</string>
    <string name="btn_voice_input">Voice input</string>
    <string name="btn_fire_fn">Fire Fn</string>
    <string name="btn_connect_to_server">Connect to server</string>
    <string name="btn_launch_app">Launch app</string>
    <string name="btn_launch_app_from_taskbar">Launch app from taskbar</string>
    <string name="btn_arrows">Arrows</string>
    <string name="btn_context_btns">Context buttons</string>
    <string name="btn_left_click">Left click</string>
    <string name="btn_right_click">Right click</string>
    <string name="btn_center_click">Center click</string>
    <string name="btn_wheel_up">Wheel up</string>
    <string name="btn_wheel_down">Wheel down</string>
    <string name="fn_bind_tab_title_shortcut">Create shortcut</string>
    <string name="fn_bind_tab_title_choose">Choose existing fn</string>
    <string name="fn_bind_tab_title_cmd">Create command line command</string>
    <string name="fn_custom_empty_text">Select something</string>
    <string name="fn_create_ok_btn">That\'s what i need!</string>
    <string name="full_access_dialog_title">Full access</string>
    <string name="full_access_dialog_body">You reached buttons limit. Buy full access to add and edit buttons with no limits.</string>
    <string name="full_access_dialog_ok">Buy full access</string>
    <string name="full_access_dialog_no">Not today</string>


    <string name="drag_drop_edit">Edit</string>
    <string name="drag_drop_del">Delete</string>

    <string name="hold_one_btn_hint">Hold, look at PC screen :)</string>
    <string name="tutorial_you_need_pc_app">To use remote you need to run the application on your PC</string>
    <string name="first_launch">First launch</string>
</resources>