<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- The main content view -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ST"
            android:background="@android:color/white"
            android:layout_gravity="right|top"
            android:id="@+id/ll">



        <TableLayout
            android:id="@+id/legacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:visibility="gone">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="IP"
                    android:text="IP" />

                <EditText
                    android:id="@+id/etIp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:digits="0123456789."
                    android:hint="IP"
                    android:inputType="numberDecimal"
                    android:text="192.168.1.4" >

                    <requestFocus />
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Server port" />

                <EditText
                    android:id="@+id/etSocket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:ems="10"
                    android:hint="Server port"
                    android:inputType="numberDecimal"
                    android:text="6666" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Client port" />

                <EditText
                    android:id="@+id/etPort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:ems="10"
                    android:hint="Client port"
                    android:inputType="numberDecimal"
                    android:text="4444" />

                <ru.korinc.sockettest.ZanyEditText
                    android:id="@+id/etKeyboard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textNoSuggestions|textMultiLine" >

                    <requestFocus />
                </ru.korinc.sockettest.ZanyEditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="A" />

                <EditText
                    android:id="@+id/etA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:digits="0123456789-"
                    android:ems="10"
                    android:hint="A"
                    android:inputType="numberDecimal"
                    android:text="1" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="B" />

                <EditText
                    android:id="@+id/etB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:digits="0123456789-"
                    android:ems="10"
                    android:hint="B"
                    android:inputType="numberDecimal"
                    android:text="2" />
            </TableRow>
        </TableLayout>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:id="@+id/workSpace"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true">



                <TableRow
                    android:id="@+id/tableWSRow1"

                    android:layout_height="wrap_content"
                    android:minHeight="65dp"

                    >
                    <ru.korinc.sockettest.FnButton
                        android:id="@+id/workSpaceBTN1"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                       android:textColor="@android:color/transparent"
                        android:background="@drawable/no_fn_btn_background"
                        android:layout_margin="5dp"
                        android:text="@string/no_functon"

                        />

                    <ru.korinc.sockettest.FnButton
                        android:id="@+id/workSpaceBTN2"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                       android:textColor="@android:color/transparent"
                        android:background="@drawable/no_fn_btn_background"
                        android:layout_margin="5dp"
                        android:text="@string/no_functon"

                         />

                    <ru.korinc.sockettest.FnButton
                        android:id="@+id/workSpaceBTN3"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                       android:textColor="@android:color/transparent"
                        android:background="@drawable/no_fn_btn_background"
                        android:layout_margin="5dp"
                        android:text="@string/no_functon"

                        />
                </TableRow>

                <TableRow
                    android:id="@+id/tableWSRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:minHeight="65dp"
>
                    <ru.korinc.sockettest.FnButton
                        android:id="@+id/workSpaceBTN4"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"

                       android:textColor="@android:color/transparent"
                        android:background="@drawable/no_fn_btn_background"
                        android:layout_margin="5dp"
                        android:text="@string/no_functon"

                        />

                    <ru.korinc.sockettest.FnButton
                        android:id="@+id/workSpaceBTNNoBtn"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                       android:textColor="@android:color/transparent"
                        android:background="@drawable/no_fn_btn_background"
                        android:layout_margin="5dp"
                        android:text="@string/no_functon"
                        android:visibility="invisible"
                        />


                    <ru.korinc.sockettest.FnButton
                        android:id="@+id/workSpaceBTN6"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                       android:textColor="@android:color/transparent"
                        android:background="@drawable/no_fn_btn_background"
                        android:layout_margin="5dp"
                        android:text="@string/no_functon"

                        />
                </TableRow>

                <TableRow
                    android:id="@+id/tableWSRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:background="#75d6d6d6"
                    android:minHeight="65dp">
                    <ru.korinc.sockettest.FnButton
                        android:id="@+id/workSpaceBTN7"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                       android:textColor="@android:color/transparent"
                        
                        android:background="@drawable/no_fn_btn_background"
                        android:layout_margin="5dp"
                        android:text="@string/no_functon"

                        />

                    <ru.korinc.sockettest.FnButton
                        android:id="@+id/workSpaceBTN8"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                       android:textColor="@android:color/transparent"
                        android:background="@drawable/no_fn_btn_background"
                        android:layout_margin="5dp"
                        android:text="@string/no_functon"

                        />

                    <ru.korinc.sockettest.FnButton
                        android:id="@+id/workSpaceBTN9"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                       android:textColor="@android:color/transparent"
                        android:background="@drawable/no_fn_btn_background"
                        android:layout_margin="5dp"
                        android:text="@string/no_functon"

                        />
                </TableRow>

            </TableLayout>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="15dp"
                android:id="@+id/menu_btn"
                android:background="@drawable/menu_bgrnd"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_margin="20dp" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_alignTop="@id/workSpace"
                android:layout_alignBottom="@id/workSpace"

                >

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"


                    android:src="@drawable/one_btn_bgrnd"
                    android:layout_gravity="center"
                    android:id="@+id/oneBtn"
                    android:padding="30dp" />
            </FrameLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/dragMenuLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:orientation="vertical"
            android:layout_marginTop="50dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/editButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drag_drop_edit"
                    android:background="@android:color/transparent"
                    android:textColor="@android:color/black"
                    android:layout_margin="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"/>

                <Button
                    android:id="@+id/dellButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drag_drop_del"
                    android:background="@android:color/transparent"
                    android:textColor="@android:color/black"
                    android:layout_margin="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:clickable="false" />

            </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/VolDownButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:textColor="@android:color/black"
                        android:layout_margin="5dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:layout_weight="1"
                        android:text="@string/volDown" />

                    <Button
                        android:id="@+id/VolUpButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/volUp"
                        android:background="@android:color/transparent"
                        android:textColor="@android:color/black"
                        android:layout_margin="5dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:layout_weight="1" />


                </LinearLayout>

        </LinearLayout>


    </FrameLayout>
    <!-- The navigation drawer -->
    <RelativeLayout
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="right">

        <Button
            android:id="@+id/addButton"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="+"
            android:textColor="@android:color/black"
            android:background="@android:color/white"
            />

        <GridView android:id="@+id/right_drawer"
            android:layout_width="match_parent"
            android:numColumns="2"
            android:layout_height="match_parent"
            android:layout_above="@id/addButton"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp"
            android:background="@android:color/white"/>
        </RelativeLayout>

</android.support.v4.widget.DrawerLayout>